--- a/blogicum/templates/404.html
+++ b/blogicum/templates/404.html
@@ -5,7 +5,7 @@
   <div class="notfound-404">
       <h1>404</h1>
   </div>
-  <h4>К сожалению, страница, которую вы ищете, не найдена!</h4>
+  <h4>Страница, которую вы ищете, не найдена!</h4>
   <a href="{% url 'blog:index' %}">Вернуться на главную ...</a>
 </div>
 {% endblock %}
