--- a/blogicum/templates/blog/detail.html
+++ b/blogicum/templates/blog/detail.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 {% block title %}{{ post.location }}. {{ post.date }}{% endblock %}
 {% block content %}
-  {% include "includes/info_list.html"%}
+  {% include 'blog/includes/post.html' %}
 {% endblock %}
