--- a/blogicum/templates/blog/includes/post.html
+++ b/blogicum/templates/blog/includes/post.html
@@ -11,11 +11,12 @@
         Категория: <a href="{% url 'blog:category_posts' post.category %}">{{ post.category }}</a>
       </li>
     </ul> 
-    {% if request.resolver_match.url_name == 'index' %}
+    {% if reduction_text %}
       <p>
-        {{ post.text|truncatewords:10 }}
+        {{ post.text|truncatewords:10|linebreaks }}
       </p>
       <a href="{% url 'blog:post_detail' post.id %}">Читать полный текст</a>
+      <hr>
     {% else %}
       <p>{{ post.text|linebreaks }}</p>
     {% endif %}
