--- a/blogicum/templates/blog/index.html
+++ b/blogicum/templates/blog/index.html
@@ -2,8 +2,7 @@
 {% block title %}Лента записей{% endblock %}
 {% block content %}
   <h1>Лента записей</h1>
-  <hr>
-  {% for post in posts %}
-    {% include "includes/info_list.html" %} 
-  {% endfor %}
+    {% for post in posts %}
+      {% include 'blog/includes/post.html' with reduction_text=True %} 
+    {% endfor %}
 {% endblock %}
